--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,17 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:label="kantega" android:icon="@drawable/icon">
-        <activity android:name="MyActivity"
+        <activity android:name=".MenuActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".OverviewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
