--- a/code/android/AndroidManifest.xml
+++ b/code/android/AndroidManifest.xml
@@ -3,7 +3,9 @@
       package="no.kantega.android"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="kantega" android:icon="@drawable/icon">
+
+
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MenuActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -11,11 +13,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OverviewActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+
     </application>
-</manifest> 
+</manifest>
