--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
+*.log
+*.swp
+*~
+*.class
+*.lyx#
+*.iml
+*.old
+.idea
 .classpath
 .project
 .settings
 eclipse
-tmp
-*.log
-*.swp
 nbproject
-*.iml
-precompiled
-.idea
-local.properties
 gen
 out
 bin
-*.lyx#
-*~
-*.class
 target
+local.properties
+build.xml
