--- a/code/server/pom.xml
+++ b/code/server/pom.xml
@@ -28,17 +28,17 @@
             <url>http://maven.restlet.org</url>
         </repository>
         <repository>
-            <id>codehaus</id>
-            <name>Codehaus</name>
-            <url>http://repository.codehaus.org/org/codehaus</url>
-        </repository>
-        <!-- <repository>
-            <id>jboss-maven2-release-repository</id>
+            <id>jboss</id>
             <name>JBoss</name>
-            <url>http://repository.jboss.org/maven2/</url>
-        </repository> -->
+            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+        </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.5.6-Final</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -54,11 +54,6 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.6.4</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.5.5-Final</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -79,11 +74,6 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>4.1.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
