One last attempt at sending a list of beans

--- a/code/server/pom.xml
+++ b/code/server/pom.xml
@@ -47,6 +47,11 @@
             <version>3.5.6-Final</version>
         </dependency>
         <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet.ext.jackson</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
@@ -66,6 +71,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.6.4</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.6.4</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
