--- a/code/android/AndroidManifest.xml
+++ b/code/android/AndroidManifest.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="no.kantega.android"
-      android:versionCode="1"
-      android:versionName="1.0">
+          package="no.kantega.android"
+          android:versionCode="1"
+          android:versionName="1.0">
 
 
-    <application android:icon="@drawable/icon" 
-        android:label="@string/app_name"
-        android:debuggable="true">
+    <application android:icon="@drawable/icon"
+                 android:label="@string/app_name"
+                 android:debuggable="true">
         <activity android:name=".MenuActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".OverviewActivity"></activity>
         <activity android:name=".SynchronizeActivity"></activity>
 
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
