Use fixtures and local database

--- a/code/server/conf/application.conf
+++ b/code/server/conf/application.conf
@@ -90,10 +90,11 @@ java.source=1.6
 # db.driver=org.postgresql.Driver
 # db.user=root
 # db.pass=secret
-db.url=jdbc:postgresql://tar.io/kantega
-db.driver=org.postgresql.Driver
-db.user=kantega
-db.pass=kant3ga_?db1
+db=mem
+#db.url=jdbc:postgresql://tar.io/kantega
+#db.driver=org.postgresql.Driver
+#db.user=kantega
+#db.pass=kant3ga_?db1
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
@@ -108,7 +109,7 @@ db.pass=kant3ga_?db1
 #
 # Specify the custom JPA dialect to use here (default to guess):
 # jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
