Added transactions tab, showing last transactions.

--- a/code/android/AndroidManifest.xml
+++ b/code/android/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".OverviewActivity"></activity>
+        <activity android:name=".TransactionsActivity"></activity>
         <activity android:name=".SynchronizeActivity"></activity>
 
     </application>
