--- a/code/android/pom.xml
+++ b/code/android/pom.xml
@@ -7,14 +7,10 @@
     <groupId>no.kantega.android</groupId>
     <artifactId>android</artifactId>
     <version>1.0</version>
-
     <packaging>apk</packaging>
     <name>android</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>6</maven.compiler.source>
-        <maven.compiler.target>6</maven.compiler.target>
     </properties>
 
     <repositories>
@@ -29,7 +25,6 @@
             </releases>
         </repository>
     </repositories>
-
     <dependencies>
         <dependency>
             <groupId>com.google.android</groupId>
@@ -49,52 +44,36 @@
             <version>4.8.2</version>
         </dependency>
     </dependencies>
-
     <build>
-        <!-- This should be just the artifact identifier, no version on the APK file,
-             because this is what IntelliJ will use by default.
-        -->
+        <sourceDirectory>src</sourceDirectory>
         <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>maven-android-plugin</artifactId>
-                <version>2.6.0</version>
+                <version>2.8.3</version>
+                <extensions>true</extensions>
                 <configuration>
                     <sdk>
-
-                        <!-- Don't forget to set your ANDROID_HOME environment variable to your SDK directory! -->
-                        <path>env.ANDROID_HOME</path>
-
-                        <!-- Platform 10 is Android 2.3.3 -->
+                        <path>${env.ANDROID_HOME}</path>
                         <platform>10</platform>
-
                     </sdk>
-
-                    <!-- All of these go into the /src/main/android/ directory, we don't
-             want to polute the project root directory. -->
-                    <androidManifestFile>
-                        ${project.basedir}/src/main/android/AndroidManifest.xml
-                    </androidManifestFile>
-                    <resourceDirectory>${project.basedir}/src/main/android/res
-                    </resourceDirectory>
-                    <assetsDirectory>${project.basedir}/src/main/android/assets
-                    </assetsDirectory>
-                    <nativeLibrariesDirectory>
-                        ${project.basedir}/src/main/android/native
-                    </nativeLibrariesDirectory>
-                    <resourceOverlayDirectory>
-                        ${project.basedir}/src/main/android/overlay
-                    </resourceOverlayDirectory>
-
-                    <!-- Read the Android Maven plugin documentation about these settings -->
+                    <androidManifestFile>${project.basedir}/src/main/android/AndroidManifest.xml</androidManifestFile>
+                    <resourceDirectory>${project.basedir}/src/main/android/res</resourceDirectory>
+                    <assetsDirectory>${project.basedir}/src/main/android/assets</assetsDirectory>
+                    <nativeLibrariesDirectory>${project.basedir}/src/main/android/native</nativeLibrariesDirectory>
+                    <resourceOverlayDirectory>${project.basedir}/src/main/android/overlay</resourceOverlayDirectory>
                     <deleteConflictingFiles>true</deleteConflictingFiles>
                     <undeployBeforeDeploy>true</undeployBeforeDeploy>
-
                 </configuration>
-                <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
