--- a/code/server/pom.xml
+++ b/code/server/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
+    <!-- <parent>
         <groupId>org.play</groupId>
         <artifactId>play-parent</artifactId>
         <version>1.1</version>
-    </parent>
+    </parent> -->
 
     <groupId>no.kantega.server</groupId>
     <artifactId>appserver</artifactId>
