--- a/code/android/src/main/android/AndroidManifest.xml
+++ b/code/android/src/main/android/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity android:name=".OverviewActivity"></activity>
         <activity android:name=".TransactionsActivity"></activity>
         <activity android:name=".SynchronizeActivity"></activity>
-
+        <activity android:name=".AddTransactionActivity"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
