--- a/code/server/pom.xml
+++ b/code/server/pom.xml
@@ -3,19 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- <parent>
-        <groupId>org.play</groupId>
-        <artifactId>play-parent</artifactId>
-        <version>1.1</version>
-    </parent> -->
-
     <groupId>no.kantega.server</groupId>
-    <artifactId>appserver</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>Server for Android app</name>
-    <description>Used by our Android app for retrieving transactions
-    </description>
-
+    <artifactId>server</artifactId>
+    <version>1.0</version>
+    
     <dependencies>
         <dependency>
             <groupId>postgresql</groupId>
