--- a/code/android/pom.xml
+++ b/code/android/pom.xml
@@ -39,6 +39,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-android</artifactId>
+            <version>4.6</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
