--- a/code/android/pom.xml
+++ b/code/android/pom.xml
@@ -27,6 +27,11 @@
     <dependencies>
         <dependency>
             <groupId>com.google.android</groupId>
+            <artifactId>android-test</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
             <version>2.3.1</version>
             <scope>provided</scope>
