--- a/code/android/src/main/android/AndroidManifest.xml
+++ b/code/android/src/main/android/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".TransactionsActivity"></activity>
         <activity android:name=".SynchronizeActivity"></activity>
         <activity android:name=".AddTransactionActivity"></activity>
+        <activity android:name=".EditTransactionActivity"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
