--- a/code/android/src/main/android/AndroidManifest.xml
+++ b/code/android/src/main/android/AndroidManifest.xml
@@ -21,6 +21,24 @@
         <activity android:name=".AddTransactionActivity"></activity>
         <activity android:name=".EditTransactionActivity"></activity>
         <activity android:name=".EditExternalTransactionActivity"></activity>
+        <!-- Only C2DM servers can send messages for the app. If permission is not set - any other app can generate it -->
+        <service android:name=".C2DMReceiver"/>
+        <receiver android:name="com.google.android.c2dm.C2DMBroadcastReceiver"
+                  android:permission="com.google.android.c2dm.permission.SEND">
+            <!-- Receive the actual message -->
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <category android:name="com.example.myapp"/>
+            </intent-filter>
+            <!-- Receive the registration id -->
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <category android:name="com.example.myapp"/>
+            </intent-filter>
+        </receiver>
     </application>
+    <!-- Send the registration id to the server -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- This app has permission to register and receive message -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 </manifest>
