Remove postgresql-jdbc dependency from server

--- a/code/server/pom.xml
+++ b/code/server/pom.xml
@@ -11,11 +11,11 @@
     </properties>
 
     <dependencies>
-        <dependency>
+        <!-- <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.0-801.jdbc4</version>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
     <build>
