--- a/code/android/src/main/android/AndroidManifest.xml
+++ b/code/android/src/main/android/AndroidManifest.xml
@@ -4,6 +4,11 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+    <permission android:name="no.kantega.android.afp.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
+    <uses-permission android:name="no.kantega.android.afp.permission.C2D_MESSAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 
     <application android:icon="@drawable/icon"
                  android:label="@string/app_name"
@@ -21,9 +26,18 @@
         <activity android:name=".AddTransactionActivity"></activity>
         <activity android:name=".EditTransactionActivity"></activity>
         <activity android:name=".CategoryActivity"></activity>
+        <service android:name=".C2DMReceiver"/>
+        <receiver android:name="com.google.android.c2dm.C2DMBroadcastReceiver"
+                  android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <category android:name="com.commonsware.android.c2dm"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <category android:name="com.commonsware.android.c2dm"/>
+            </intent-filter>
+        </receiver>
+
     </application>
-    <!-- Send the registration id to the server -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!-- This app has permission to register and receive message -->
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
 </manifest>
