--- a/code/android/src/main/android/AndroidManifest.xml
+++ b/code/android/src/main/android/AndroidManifest.xml
@@ -38,8 +38,9 @@
         <activity android:name=".SynchronizeActivity"/>
         <activity android:name=".AddTransactionActivity"/>
         <activity android:name=".EditTransactionActivity"/>
-        <activity android:name=".CategoryActivity"/>
+        <activity android:name=".AddCategoryActivity"/>
         <activity android:name=".NotificationsActivity"/>
+        <activity android:name=".CategoryActivity"/>
 
         <!-- In order to use the c2dm library, an
              application must declare a class with the name C2DMReceiver, in its
