Updated strings and manifest

--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".NotificationsActivity"/>
         <activity android:name=".CategoryActivity"/>
         <activity android:name=".PieChartActivity"/>
+        <activity android:name=".SimilarTransactionsActivity"/>
 
         <!-- In order to use the c2dm library, an
              application must declare a class with the name C2DMReceiver, in its
