--- a/android/pom.xml
+++ b/android/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.pivotallabs</groupId>
             <artifactId>robolectric</artifactId>
-            <version>0.9.8</version>
+            <version>1.0-RC1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
