--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity android:name=".EditTransactionActivity"/>
         <activity android:name=".AddCategoryActivity"/>
         <activity android:name=".NotificationsActivity"/>
-        <activity android:name=".CategoryActivity"/>
+        <activity android:name=".TransactionsPerTagActivity"/>
         <activity android:name=".PieChartActivity"/>
         <activity android:name=".SimilarTransactionsActivity"/>
 
