--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="no.kantega.android.afp"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+          android:installLocation="auto">
 
     <!-- Only this application can receive the messages and registration result -->
     <permission android:name="no.kantega.android.afp.permission.C2D_MESSAGE"
