Added a textview to transactions xml to display number of transactions in list. Started working on a settingsactivity.

--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".TransactionsPerTagActivity"/>
         <activity android:name=".PieChartActivity"/>
         <activity android:name=".SimilarTransactionsActivity"/>
+        <activity android:name=".SettingsActivity"/>
 
         <!-- In order to use the c2dm library, an
              application must declare a class with the name C2DMReceiver, in its
