--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -92,10 +92,10 @@ java.source=1.6
 # db.user=root
 # db.pass=secret
 db=mem
-#db.url=jdbc:postgresql://tar.io/kantega
-#db.driver=org.postgresql.Driver
-#db.user=kantega
-#db.pass=kant3ga_?db1
+%prod.db.url=jdbc:postgresql://127.0.0.1/kantega
+%prod.db.driver=org.postgresql.Driver
+%prod.db.user=kantega
+%prod.db.pass=kant3ga_?db1
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
@@ -110,11 +110,12 @@ db=mem
 #
 # Specify the custom JPA dialect to use here (default to guess):
 # jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-#jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+%prod.jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
 # jpa.ddl=update
+%prod.jpa.ddl=create
 #
 # Debug SQL statements (logged using DEBUG level):
 # jpa.debugSQL=true
