--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
 
-    <application android:icon="@drawable/icon"
+    <application android:icon="@drawable/monster"
                  android:label="@string/app_name"
                  android:debuggable="true">
         <!-- Our activities -->
