Remove pom.xml and replace it with dependency management found in Play 1.2

--- a/server/conf/dependencies.yml
+++ b/server/conf/dependencies.yml
@@ -2,5 +2,6 @@
 
 require:
     - play
+    - play -> search head
     - com.google.guava -> guava r09
     - postgresql -> postgresql 9.0-801.jdbc4
