Fix H2 memory databse configuration

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -208,6 +208,7 @@ mail.smtp=mock
 %test.db=mem
 %test.jpa.ddl=create-drop
 %test.mail.smtp=mock
+%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 
 # http://code.google.com/apis/accounts/docs/AuthForInstalledApps.html#Request
 c2dm.auth.url=https://www.google.com/accounts/ClientLogin
