Force updated version of Gson to solve date format bug

--- a/server/conf/dependencies.yml
+++ b/server/conf/dependencies.yml
@@ -5,3 +5,5 @@ require:
     - play -> search head
     - com.google.guava -> guava r09
     - postgresql -> postgresql 9.0-801.jdbc4
+    - com.google.code.gson -> gson 1.7.1:
+        force: true
