--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -28,22 +28,40 @@
         <!-- Our activities -->
         <activity android:name=".MenuActivity"
                   android:label="@string/app_name"
+                  android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".OverviewActivity"/>
-        <activity android:name=".TransactionsActivity"/>
-        <activity android:name=".SynchronizeActivity"/>
-        <activity android:name=".AddTransactionActivity"/>
-        <activity android:name=".EditTransactionActivity"/>
-        <activity android:name=".NotificationsActivity"/>
-        <activity android:name=".TransactionsPerTagActivity"/>
-        <activity android:name=".PieChartActivity"/>
-        <activity android:name=".SimilarTransactionsActivity"/>
-        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".OverviewActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".TransactionsActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".SynchronizeActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".AddTransactionActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".EditTransactionActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".NotificationsActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".TransactionsPerTagActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".PieChartActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".SimilarTransactionsActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".SettingsActivity"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
 
         <!-- In order to use the c2dm library, an
              application must declare a class with the name C2DMReceiver, in its
