Added StatsActivity that currently shows a static image. Fixed buttons for datepicker left and right to change onClick.

--- a/android/src/main/android/AndroidManifest.xml
+++ b/android/src/main/android/AndroidManifest.xml
@@ -62,6 +62,9 @@
                   android:theme="@android:style/Theme.NoTitleBar"/>
         <activity android:name=".SettingsActivity"
                   android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".StatsActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@android:style/Theme.NoTitleBar"/>
 
         <!-- In order to use the c2dm library, an
              application must declare a class with the name C2DMReceiver, in its
