Change version number to 1.0.0 and add annotations dependency

--- a/android/pom.xml
+++ b/android/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>no.kantega.android.afp</groupId>
     <artifactId>afp</artifactId>
-    <version>0.5.5</version>
+    <version>1.0.0</version>
     <packaging>apk</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,6 +45,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>7.0.3</version>
         </dependency>
     </dependencies>
 
